--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,35 +1,35 @@
-@import '../styles/variables';
+@use '../styles/variables';
 .primary--btn {
-	background: $blue-light;
+	background: variables.$blue-light;
 	padding: 7px 16px;
 	border: none;
-	color: $white-color;
+	color: variables.$white-color;
 	letter-spacing: 1.5px;
 }
 
 .success--btn {
-	background: $background-color-transparent;
+	background: variables.$background-color-transparent;
 	padding: 7px 16px;
-	border: 1px solid $success-color;
-	color: $success-color;
+	border: 1px solid variables.$success-color;
+	color: variables.$success-color;
 	letter-spacing: 1.5px;
 	transition: all 0.5s;
 	&:hover {
-		background: $success-color;
-		color: $white-color;
+		background: variables.$success-color;
+		color: variables.$white-color;
 		transition: all 0.5s;
 	}
 }
 
 .error-btn {
-	background: $background-color-transparent;
+	background: variables.$background-color-transparent;
 	padding: 7px 16px;
-	border: 1px solid $error-red;
-	color: $error-red;
+	border: 1px solid variables.$error-red;
+	color: variables.$error-red;
 	letter-spacing: 1.5px;
 	&:hover {
-		background: $error-red;
-		color: $white-color;
+		background: variables.$error-red;
+		color: variables.$white-color;
 		transition: all 0.5s;
 	}
 }
